--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 737185589565.dkr.ecr.eu-west-1.amazonaws.com/kubernetesspringboot
+        image: 737185589565.dkr.ecr.ap-south-1.amazonaws.com/demoecs
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
