--- a/eks-deploy-from-ecr.yaml
+++ b/eks-deploy-from-ecr.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 737185589565.dkr.ecr.ap-south-1.amazonaws.com/demoecs
+        image: 737185589565.dkr.ecr.eu-west-1.amazonaws.com/jenkinseks
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
